--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 
     #scoreDiV{
         font-size: 40px;
-        background-color: #af4c4c;
+        background-color: red;
         display: inline-block;
         width: 150px;
         border-radius: 10px;
@@ -66,7 +66,7 @@ body{
     }
 
     #cpsDiv{
-        background-color: coral;
+        background-color: green;
         display: inline-block;
         width: 150px;
         border-radius: 10px;
